--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-                         /*----POLICE------*/
+                         /*----POLICE----*/
                          
                          @font-face {
                              font-family: 'alegreyaregular';
@@ -8,7 +8,7 @@
                          }
                          
                          #contenu {
-                             font-family: 'alegreyregular', sans-serif;
+                             font-family: 'alegreyregular', Georgia, 'Times New Roman', Times, serif;
                              font-size: 15px;
                              background-color: #DADBDD;
                              color: #FFFFFF;
@@ -41,6 +41,7 @@
                              max-width: 150px;
                              max-height: 150px;
                              overflow: hidden;
+                             /*pour que la photo ne dépasse pas*/
                          }
                          
                          #photo_header {
@@ -147,7 +148,7 @@
                              height: 150px;
                              overflow: hidden;
                          }
-                         /*----PAGE CENTRALE------*/
+                         /*---PAGE CENTRALE----*/
                          
                          #centre {
                              flex: 1;
@@ -198,7 +199,7 @@
                          }
                          
                          .page_puce {
-                             color: #4CAF50;
+                             color: #00FFF0;
                              font-size: 0.8em;
                              margin-right: 10px;
                          }
@@ -221,6 +222,7 @@
                          }
                          
                          .texte_paragraphe p {
+                             /*A VERIFIER*/
                              margin: 0;
                          }
                          
@@ -245,17 +247,16 @@
                          p span {
                              font-weight: bold;
                          }
-                         /*----------------RESPONSIVE DESIGN-------------------------------*/
-                         /*----------------TABLETTES---------------------------------------*/
+                         /*----RESPONSIVE DESIGN----*/
+                         /*----TABLETTES----*/
                          
                          @media all and (max-width: 900px) {
-                             /*----ORGANISATON DE LA PAGE------*/
                              #contenu {
                                  flex-direction: column;
                                  width: auto;
                              }
-                             /*----HEADER------*/
-                             #header {
+                             /*----HEADER----*/
+                             header {
                                  margin: auto;
                                  display: flex;
                                  flex-direction: column;
@@ -292,7 +293,7 @@
                                  width: 120%;
                                  transform: translate(-12px, -80px);
                              }
-                             /*----PAGE CENTRE------*/
+                             /*----PAGE CENTRE----*/
                              #page_corps {
                                  margin-top: 10px;
                              }
@@ -308,10 +309,9 @@
                                  justify-content: space-around;
                                  margin-top: 15px;
                              }
-                             /*----ASIDE------*/
+                             /*----ASIDE----*/
                              #liseret {
                                  max-width: unset;
-                                 /*désactive la largeur max fixé à 270px en mode laptop*/
                                  order: 2;
                              }
                              .aside_titre,
