--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
                              max-width: 270px;
                              display: flex;
                              flex-direction: column;
-                             background-color: #004058;
+                             background-color: #006064;
                          }
                          
                          #photo {
@@ -57,8 +57,8 @@
                          .aside_titre {
                              text-align: center;
                              text-transform: uppercase;
-                             color: #004058;
-                             background-color: #66ACAE;
+                             color: #FFFFFF;
+                             background-color: #000000;
                              padding: 2%;
                              font-family: Georgia, 'Times New Roman', Times, serif;
                              font-weight: normal;
@@ -68,8 +68,8 @@
                          .aside_titre_gras {
                              text-align: center;
                              text-transform: uppercase;
-                             color: #004058;
-                             background-color: #66ACAE;
+                             color: #FFFFFF;
+                             background-color: #000000;
                              padding: 2%;
                              font-family: Georgia, 'Times New Roman', Times, serif;
                              font-weight: normal;
