--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
                              justify-content: space-around;
                              flex-wrap: wrap;
                              margin-bottom: 5%;
-                             color: #66ACAE;
+                             color: #FFFFFF;
                          }
                          /*----HEADER------*/
                          
