--- a/style.css
+++ b/style.css
@@ -265,11 +265,11 @@
          background-color: #006064;
      }
      #prenom {
-         color: #FF00FF;
+         color: #FFF;
      }
      #souligne_dev {
          border-bottom: solid;
-         border-color: rgb(9, 255, 21);
+         border-color: #FFF;
      }
      h1 {
          margin-top: 10px;
@@ -320,7 +320,7 @@
      .aside_titre_gras {
          padding: 0.8%
      }
-     ##logo {
+     #logo {
          display: none;
      }
      .contact {
