--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@
          margin: auto;
          margin-bottom: 15px;
      }
-     #loisirs {
+     .icon_loisirs {
          display: none;
      }
  }
