--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@
      #prenom {
          color: #FFF;
      }
-     #souligne_dev {
+     #surligne_dev {
          border-bottom: solid;
          border-color: #FFF;
      }
