--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
  }
  
  #contenu {
-     font-family: 'alegreyregular', Georgia, 'Times New Roman', Times, serif;
+     font-family: Arial, Helvetica, sans-serif;
      font-size: 16px;
      background-color: #FAFAFA;
      color: #000;
@@ -60,7 +60,7 @@
      color: #FFF;
      background-color: #000;
      padding: 2%;
-     font-family: Georgia, 'Times New Roman', Times, serif;
+     font-family: Arial, Helvetica, sans-serif;
      font-weight: normal;
      font-size: 54px;
  }
@@ -71,7 +71,7 @@
      color: #FFF;
      background-color: #000;
      padding: 2%;
-     font-family: Georgia, 'Times New Roman', Times, serif;
+     font-family: Arial, Helvetica, sans-serif;
      font-weight: normal;
      font-size: 22px;
  }
@@ -79,6 +79,8 @@
  .contact {
      padding-left: 8%;
      color: #FFF;
+     font-size: 14px;
+     font-weight: bold;
      overflow-wrap: break-word;
  }
  
@@ -102,11 +104,14 @@
  .icon_loisirs {
      display: flex;
      justify-content: space-around;
-     flex-wrap: wrap;
      font-size: 30px;
      margin-bottom: 10%;
-     border-radius: 50%;
      color: #FFF;
+ }
+ 
+ .fa-stack {
+     border-radius: 50%;
+     padding: 10px;
  }
  /*---- HEADER ----*/
  
@@ -117,7 +122,7 @@
  h1 {
      text-transform: uppercase;
      font-weight: 300;
-     font-family: Georgia, 'Times New Roman', Times, serif;
+     font-family: Arial, Helvetica, sans-serif;
      font-size: 40px;
      color: #000;
      margin-top: 8%;
@@ -216,7 +221,7 @@
  }
  
  h4 {
-     font-family: 'alegreyregular', Georgia, 'Times New Roman', Times, serif;
+     font-family: Arial, Helvetica, sans-serif;
      font-weight: bold;
      font-size: 18px;
      text-transform: uppercase;
