--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@
  
  h5 {
      font-weight: normal;
-     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+     font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
      font-size: 16px;
  }
  
